Update backend folder style
Backend tarafında var olan backend sıkınıtları tekrardan ele alındı ve de düzeldi